prevent virtual device timing out

--- a/client/js/index.html
+++ b/client/js/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="reconnecting-websocket.min.js"></script>
-        <script src="chetbot.js"></script>
+        <style type="text/css">
+        body {
+            padding-top: 1em;
+            background-color: #1a1a1a;
+            text-align: center;
+        }
+        </style>
     </head>
     <body>
+        <iframe src="https://appetize.io/embed/z8460qxgdyrfe8c2ag1z6bqyw0?device=nexus5&amp;scale=75&amp;autoplay=true&amp;orientation=portrait&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7B%22session_token%22%3A%22SESSION_TOKEN_GOES_HERE%22%7D" width="300px" height="597px" frameborder="0" scrolling="no"></iframe>
     </body>
+    <script src="reconnecting-websocket.min.js"></script>
+    <script src="chetbot.js"></script>
 </html>
