use promises to execute script sequentially

--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -72,6 +72,7 @@
 
     <!-- JavaScript API -->
     <script src="js/reconnecting-websocket.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/q.js/1.4.1/q.min.js"></script>
     <script src="js/chetbot-client.js"></script>
     <script>
         // chetbot-client session ID
