added title to demo page

--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>ChetBot demo</title>
         <style type="text/css">
         body {
             background-color: #1a1a1a;
