--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -4,7 +4,7 @@
         <title>ChetBot demo</title>
         <style type="text/css">
         body {
-            background-color: #ccc;
+            background-color: #f9f9f9;
             text-align: center;
             font-family: sans-serif;
             color: #111;
@@ -27,9 +27,8 @@
             right: 0;
             height: 144px;
             padding: 0 2em;
-            background-color: green;
-            color: #4CAF50;
-            box-shadow: 0 0 4px rgba(0,0,0,0.5);;
+            background-color: #00BCD4;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.5);;
         }
 
         /* TODO: branding! */
@@ -64,7 +63,7 @@
             background-color: #222;
             overflow-y: auto;
             z-index: 2;
-            box-shadow: 0 0 4px rgba(0,0,0,0.5);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.5);
         }
 
         #controls > * {
@@ -79,7 +78,7 @@
             left: 380px;
             right: 40px;
             bottom: 40px;
-            box-shadow: 0 0 4px rgba(0,0,0,0.5);;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.5);;
         }
 
         #console {
