--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -87,6 +87,7 @@
           font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
           color: white;
           padding-top: 0.5em;
+          overflow: auto;
         }
 
         #console > * {
@@ -102,10 +103,30 @@
             margin: 0;
         }
 
-        #console p {
+        #console li.result {
+          margin-bottom: 1em;
+          display: inline-block;
+        }
+
+        #console li.result::before {
+          content: '\21AA';
+          margin-right: 1em;
+        }
+
+        #console li.final-result {
           font-weight: bold;
           margin-top: 1em;
           margin-bottom: 1em;
+        }
+
+        #console li.result.bitmap {
+          width: 300px;
+          height: 300px;
+          background-color: white; /* TODO: get background colour from app! */
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center center;
+          margin: 0.5em;
         }
 
         #console .success {
