--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -56,7 +56,7 @@
 
         #controls {
             position: fixed;
-            top: 85px;
+            top: 88px;
             left: 380px;
             right: 40px;
             padding: 20px;
@@ -70,6 +70,7 @@
             font-size: 16px;
             display: table-cell;
             vertical-align: middle;
+            line-height: 1.0;
         }
 
         #editor, #console {
