hide run button on report

--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -81,7 +81,7 @@
         }
 
         #editor-container:not(.editing) #controls a.back,
-        #editor-container:not(.running) #controls a.run,
+        #editor-container.editing:not(.running) #controls a.run,
         #editor-container.running #controls a.stop {
           display: inline-block;
         }
