use static HTML for screenshots

--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -138,14 +138,10 @@
           margin-bottom: 1em;
         }
 
-        #console li.result.bitmap {
-          width: 300px;
+        #console li.result.bitmap img {
           height: 300px;
-          background-size: contain;
-          background-repeat: no-repeat;
-          background-position: center center;
           margin-top: 0.5em;
-          cursor: pointer;
+          border: 1px solid #ccc;
         }
 
         #console li.result {
