--- a/server/html/demo.html
+++ b/server/html/demo.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>ChetBot demo</title>
+        <link rel="icon" href="/favicon.ico">
         <style type="text/css">
         body {
             background-color: #f9f9f9;
