--- a/server/html/account.html
+++ b/server/html/account.html
@@ -11,13 +11,13 @@
     </style>
   </head>
   <body>
-    <img id="avatar" src="{{_json.avatar_url}}" title="{{displayName}} ({{username}})"/>
+    <img id="avatar" src="{{avatarUrl}}" title="{{displayName}} ({{username}})"/>
     <h2>{{displayName}} ({{username}})</h2>
     <a target="_blank" href="{{profileUrl}}" title="{{displayName}} on GitHub">{{username}} on GitHub</a>
     <h3>Email addresses</h3>
     <ul>
       {{#emails}}
-      <li>{{value}}</li>
+      <li>{{.}}</li> <!-- TODO: this is blank, fix it! -->
       {{/emails}}
     </ul>
   </body>
