--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ChetBot demo</title>
+        <title>{{title}} - ChetBot</title>
         <link rel="icon" href="/favicon.ico">
         <style type="text/css">
         body {
@@ -167,12 +167,12 @@
         }
         </style>
     </head>
-    <body data-session-id="{{session.id}}">
+    <body data-device-id="{{device.id}}">
         <div id="header">
           <h1>ChetBot</h1>
         </div>
         <div id="content">
-            <iframe id="device" src="https://appetize.io/embed/z8460qxgdyrfe8c2ag1z6bqyw0?device=nexus5&amp;scale=75&amp;autoplay=true&amp;orientation=portrait&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7B%22chetbot.session%22%3A%22{{session.id}}%22%7D" frameborder="0" scrolling="no"></iframe>
+            <iframe id="device" src="https://appetize.io/embed/z8460qxgdyrfe8c2ag1z6bqyw0?device={{device.model}}&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7B%22chetbot.session%22%3A%22{{device.id}}%22%7D" frameborder="0" scrolling="no"></iframe>
             <div id="editor-container" class="editing">
                 <div id="controls">
                     <a class="back" href="javascript:showEditor();" title="Back to editor">&#8592;</a>
@@ -181,7 +181,7 @@
                     <a class="stop" href="javascript:stop();" title="Stop test">&#9632;</a>
                     -->
                 </div>
-                <div id="editor">{{demo.stopwatch}}</div>
+                <div id="editor">{{code}}</div>
                 <div id="test-report">
                   <ol></ol>
                 </div>
@@ -190,12 +190,15 @@
     </body>
 
     <!-- JavaScript API -->
-    <script src="js/reconnecting-websocket.min.js"></script>
+    <script src="/js/reconnecting-websocket.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/q.js/1.4.1/q.min.js"></script>
-    <script src="js/chetbot-client.js"></script>
+    <script src="/js/chetbot-client.js"></script>
+    {{#autosave}}
+    <script src="/js/chetbot-autosave.js"></script>
+    {{/autosave}}
     <script>
         // chetbot-client session ID
-        chetbot_session = document.getElementsByTagName('body')[0].getAttributeNode("data-session-id").value;
+        chetbot_session = document.getElementsByTagName('body')[0].getAttributeNode("data-device-id").value;
     </script>
 
     <!-- code editor -->
@@ -204,12 +207,15 @@
         var editor = ace.edit('editor');
         editor.setTheme('ace/theme/tomorrow_night');
         editor.getSession().setMode('ace/mode/javascript');
+        {{#autosave}}
+        autosave(editor);
+        {{/autosave}}
     </script>
 
     <!-- test runner -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="js/esprima.min.js" charset="utf-8"></script>
-    <script src="js/escodegen.min.js" charset="utf-8"></script>
-    <script src="js/chetbot-test-runner.js"></script>
+    <script src="/js/esprima.min.js" charset="utf-8"></script>
+    <script src="/js/escodegen.min.js" charset="utf-8"></script>
+    <script src="/js/chetbot-test-runner.js"></script>
 
 </html>
