add demo to website

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -5,10 +5,11 @@
         <link rel="icon" href="/favicon.ico">
         <style type="text/css">
         body {
-            background-color: #f9f9f9;
+            background-color: #f8f8f8;
             text-align: center;
             font-family: sans-serif;
             color: rgba(0,0,0,0.87);
+
         }
 
         body > * {
@@ -22,6 +23,7 @@
         }
 
         #header {
+            display: none; /* not needed */
             position: fixed;
             top: 0;
             left: 0;
@@ -50,7 +52,7 @@
 
         #device {
             position: fixed;
-            top: 70px;
+            top: 30px;
             left: 40px;
             width: 300px;
             height: 597px;
@@ -58,11 +60,11 @@
 
         #controls {
             position: fixed;
-            top: 88px;
+            top: 48px;
             left: 380px;
             right: 40px;
             padding: 20px;
-            background-color: #80DEEA;
+            background-color: #4DB6AC;
             overflow-y: auto;
             z-index: 2;
             box-shadow: 0 2px 5px rgba(0,0,0,0.5);
@@ -101,7 +103,7 @@
 
         #editor, #test-report {
             position: fixed;
-            top: 144px;
+            top: 104px;
             left: 380px;
             right: 40px;
             bottom: 40px;
