--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -58,6 +58,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="#demo">Demo</a>
+                    </li>
+                    <li>
                         <a href="#features">Features</a>
                     </li>
                     <li>
@@ -84,8 +87,6 @@
                     <div class="intro-message">
                         <h1>Meet ChetBot</h1>
                         <h3>A user-driven approach to UI automation and testing<br>for Android and iOS</h3>
-                        <hr class="intro-divider">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3C7xNKL2wLA?controls=2" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -96,13 +97,19 @@
     </div>
     <!-- /.intro-header -->
 
+    <a name="demo"/>
+
+    <div style="line-height: 0;">
+        <iframe frameborder="0" src="/demo" style="width: 100%; height: 650px;"></iframe>
+    </div>
+
     <div class="banner bg-primary" style="background: none #337ab7;">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-sm-6">
                     <h2>Sign up for early access</h2>
                 </div>
-                <div id="mc_embed_signup" class="col-lg-6">
+                <div class="col-md-6 mc_embed_signup">
                     <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
                         <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
                         <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
@@ -204,10 +211,10 @@ __('Sign in').tap()
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-sm-6">
                     <h2>Sign up for early access</h2>
                 </div>
-                <div id="mc_embed_signup" class="col-lg-6">
+                <div class="col-md-6 signup">
                     <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
                         <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
                         <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
@@ -233,6 +240,9 @@ __('Sign in').tap()
                             <a href="#top">Back to top</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#demo">Demo</a>
+                        </li>
                         <li>
                             <a href="#features">Features</a>
                         </li>
