--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="ChetBot - Android and iOS UI test automation made simple, right in your web browser.">
+    <meta name="author" content="Chetan Padia">
 
     <title>ChetBot - Android and iOS UI automation for humans</title>
 
