added favicon to landing page

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -8,6 +8,8 @@
     <meta name="description" content="ChetBot - Android and iOS UI test automation made simple, right in your web browser.">
     <meta name="author" content="Chetan Padia">
 
+    <link rel="icon" href="/favicon.ico">
+
     <title>ChetBot - Android and iOS UI automation for humans</title>
 
     <!-- Bootstrap Core CSS -->
