--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -87,7 +87,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Meet ChetBot</h1>
-                        <h3>A user-driven approach to UI automation and testing<br>for Android and iOS</h3>
+                        <h3>A user-driven approach to test automation<br>for Android and iOS</h3>
                     </div>
                 </div>
             </div>
