--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -244,6 +244,7 @@ __('Sign in').tap()
                         <li>
                             <a href="#demo">Demo</a>
                         </li>
+                        <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="#features">Features</a>
                         </li>
