--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -5,40 +5,39 @@
         <link rel="icon" href="/favicon.ico">
         <style type="text/css">
         body {
-            background-color: #f8f8f8;
-            text-align: center;
-            font-family: sans-serif;
-            color: rgba(0,0,0,0.87);
-
+          background: #f8f8f8;
+          text-align: center;
+          font-family: sans-serif;
+          color: rgba(0,0,0,0.87);
         }
 
         body > * {
-            text-align: left;
+          text-align: left;
         }
 
         a {
-            color: rgba(0,0,0,0.87);
-            text-decoration: none;
+          color: rgba(0,0,0,0.87);
+          text-decoration: none;
         }
 
         a > .hint {
-            display: inline-block;
-            font-size: 0.8em;
-            color: rgba(0,0,0,0.5);
-            margin: 0 1em;
-            position: relative;
-            top: -0.1em
+          display: inline-block;
+          font-size: 0.8em;
+          color: rgba(0,0,0,0.5);
+          margin: 0 1em;
+          position: relative;
+          top: -0.1em
         }
 
         #header {
-            display: none; /* not needed */
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 144px;
-            background-color: #0097A7;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.5);;
+          display: none; /* not needed */
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          height: 144px;
+          background-color: #0097A7;
+          box-shadow: 0 2px 5px rgba(0,0,0,0.5);;
         }
 
         /* TODO: branding! */
@@ -53,38 +52,30 @@
         }
 
         #content {
-            position: relative;
-            width: 100%;
-            min-height: 100%;
+          position: relative;
+          width: 100%;
+          min-height: 100%;
         }
 
         #device {
-            position: fixed;
-            top: 30px;
-            left: 40px;
-            width: 300px;
-            height: 597px;
+          position: fixed;
+          top: 30px;
+          left: 40px;
+          width: 300px;
+          height: 597px;
         }
 
         #controls {
-            position: fixed;
-            top: 48px;
-            left: 380px;
-            right: 40px;
-            padding: 20px;
-            background-color: #4DB6AC;
-            overflow-y: auto;
-            z-index: 2;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.5);
-            height: 16px;
+          padding: 20px;
+          background: #4DB6AC;
+          height: 16px;
         }
 
         #controls > * {
-            font-size: 16px;
-            display: table-cell;
-            vertical-align: middle;
-            line-height: 1.0;
-            margin-right: 1em;
+          font-size: 16px;
+          vertical-align: middle;
+          line-height: 1.0;
+          margin-right: 1em;
         }
 
         #controls a {
@@ -103,6 +94,15 @@
           opacity: 1;
         }
 
+        #editor-container {
+          position: fixed;
+          top: 48px;
+          left: 380px;
+          right: 40px;
+          bottom: 40px;
+          box-shadow: 0 2px 5px rgba(0,0,0,0.5);;
+        }
+
         #editor-container:not(.editing) #controls a.back,
         #editor-container.editing:not(.running) #controls a.run,
         #editor-container.running #controls a.stop {
@@ -110,27 +110,25 @@
         }
 
         #editor, #test-report {
-            position: fixed;
-            top: 104px;
-            left: 380px;
-            right: 40px;
-            bottom: 40px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.5);;
+          display: block;
+          position: absolute;
+          top: 56px;
+          bottom: 0;
+          left: 0;
+          right: 0;
         }
 
-        #editor {
-          border-top: 2px outset #1D1F21;
-          background-color: #1D1F21; /* Make it look better while the editor loads */
+        /* Make the editor look better loading */
+         #editor {
+          background: #1D1F21;
         }
-
         #editor .ace_gutter {
-          top: -2px;
-          border-top: 2px outset #25282c;
+          background: #25282c;
         }
 
         #test-report {
           font-size: 12px;
-          background-color: #CFD8DC;
+          background: #CFD8DC;
           font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
           color: rgba(0,0,0,0.87);
           padding-top: 0.5em;
@@ -142,12 +140,12 @@
         }
 
         #test-report ol {
-            list-style: none;
-            padding: 0;
+          list-style: none;
+          padding: 0;
         }
 
         #test-report ol > li {
-            margin: 0;
+          margin: 0;
         }
 
         #test-report li.result::before {
@@ -173,11 +171,11 @@
         }
 
         #test-report .success {
-            color: #43A047;
+          color: #43A047;
         }
 
         #test-report .error {
-            color: #D32F2F;
+          color: #D32F2F;
         }
 
         #editor-container.editing #test-report {
