--- a/server/html/account.html
+++ b/server/html/account.html
@@ -28,4 +28,16 @@
       <li><form action="/app" method="post"><input type="submit" value="Upload a new app"/></form></li>
     </ul>
   </body>
+
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-61569356-3', 'auto');
+    ga('send', 'pageview');
+  </script>
+
 </html>
