upload user APK to appetize.io

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -192,7 +192,7 @@
       <h1>ChetBot</h1>
     </div>
     <div id="content">
-      <iframe id="device" src="https://appetize.io/embed/z8460qxgdyrfe8c2ag1z6bqyw0?device={{device.model}}&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7B%22chetbot.session%22%3A%22{{device.id}}%22%7D" frameborder="0" scrolling="no"></iframe>
+      <iframe id="device" src="https://appetize.io/embed/{{app.publicKey}}?device={{device.model}}&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7B%22chetbot.session%22%3A%22{{device.id}}%22%7D" frameborder="0" scrolling="no"></iframe>
       <div id="editor-container" class="editing">
         <div id="controls">
           <a class="back" href="javascript:showEditor();" title="Back to editor">&#8592;</a>
