--- a/server/html/account.html
+++ b/server/html/account.html
@@ -12,18 +12,11 @@
   </head>
   <body>
     <img id="avatar" src="{{avatarUrl}}" title="{{displayName}} ({{username}})"/>
-    <h2>{{displayName}} ({{username}})</h2>
-    <a target="_blank" href="{{profileUrl}}" title="{{displayName}} on GitHub">{{username}} on GitHub</a>
-    <h3>Email addresses</h3>
-    <ul>
-      {{#emails}}
-      <li>{{.}}</li>
-      {{/emails}}
-    </ul>
+    <h2>{{displayName}} (<a target="_blank" href="{{profileUrl}}" title="{{username}} on GitHub">{{username}}</a>)</h2>
     <h3>Apps</h3>
     <ul>
       {{#apps}}
-      <li><a href="/app/{{.}}">App</a></li>
+      <li><a href="/app/{{.}}">App ({{.}})</a></li>
       {{/apps}}
       <li id="new-app" class="new">
         <h4>Upload a new app</h4>
