"session" -> "device" in JS client

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -218,8 +218,8 @@
   <script src="/js/chetbot-autosave.js"></script>
   {{/autosave}}
   <script>
-    // chetbot-client session ID
-    chetbot_session = document.getElementsByTagName('body')[0].getAttributeNode("data-device-id").value;
+    // chetbot-client device ID
+    chetbot_device = document.getElementsByTagName('body')[0].getAttributeNode('data-device-id').value;
   </script>
 
   <!-- code editor -->
