--- a/server/html/account.html
+++ b/server/html/account.html
@@ -35,7 +35,7 @@
       ga('send', 'event', 'app-upload', 'start');
 
       var status = $('#new-app .status');
-      status.removeClass('error').text('Requsting upload...');
+      status.removeClass('error').text('Requesting upload...');
 
       var file = e.target.files[0];
       if (!file) {
