fix spelling mistake

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -167,7 +167,7 @@ __('Sign in').tap()
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Contiuous Integration made simple</h2>
+                    <h2 class="section-heading">Continuous Integration made simple</h2>
                     <p class="lead">Run tests in the cloud when you commit code, effortlessly. ChetBot gives you a one-line integration into your existing CI system and notifies you of any failures immediately.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
